# fastcodeml

./: .clang-format  .gitignore  AUTHORS  AlignedAllocator.cpp  AlignedAllocator.h  AlignedMalloc.h  BOXCQP.cpp  BOXCQP.h  BUGS  BayesTest.cpp  BayesTest.h  BootstrapRandom.cpp  BootstrapRandom.h  BranchSiteModel.cpp  BranchSiteModel.h  CDOSOptimizer.cpp  CDOSOptimizer.h  CHANGELOG  CMakeLists.txt  CmdLine.cpp  CmdLine.h  CodeMLoptimizer.cpp  CodeMLoptimizer.h  CodonFrequencies.cpp  CodonFrequencies.h  CompilerHints.h  DAGScheduler.cpp  DAGScheduler.h  Doxyfile  EMGT00050000008747.Drosophila.002.nwk  EMGT00050000008747.Drosophila.002.phy  Exceptions.h  FatVectorTransform.cpp  FatVectorTransform.h  FillMatrix.cpp  FillQ.cpp  Forest.cpp  Forest.h  ForestExport.cpp  ForestExport.h  (+88 more)
.kdev4/: fastcodeml.git.kdev4
bad_cases/: HBG000784-1.M0.009.nwk  HBG000784-1.phy  HBG005459-1.M0.000.nwk  HBG005459-1.phy  HBG005877-1.M0.002.nwk  HBG005877-1.phy  HBG010916-1.M0.009.nwk  HBG010916-1.phy  output.out
etc/: FastCodeML-0.9.1.spec
simpleopt/: SimpleGlob.h  SimpleOpt.h  basicSample.cpp  fullSample.cpp  globSample.cpp  package.cmd  runtests.cmd  runtests.win.txt
